Estructure and content of panini.html and soup.html finished

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Egg and Hash Brown Casserole</title>
   </head>
   <body>
     <h1>Egg and Hash Brown Casserole</h1>
