Add images panini and soup

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="/recipes/casserole.html">Egg and Hash Brown Casserole</a>
+    <a href="/recipes/panini.html">Prosciutto and Provolone Panini Sandwiches</a>
+    <a href="/recipes/soup.html">Fresh Tomato Soup</a>
   </body>
 </html>
