Add style.css for index.html and recipes.style for the files into recipes folder

--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/casserole.html">Egg and Hash Brown Casserole</a>
-    <a href="/recipes/panini.html">Prosciutto and Provolone Panini Sandwiches</a>
-    <a href="/recipes/soup.html">Fresh Tomato Soup</a>
+    <main class="container">      
+      <h1 class="title">Odin Recipes</h1>
+      <div>
+        <a href="/recipes/casserole.html">Egg and Hash Brown Casserole</a>
+        <a href="/recipes/panini.html"
+          >Prosciutto and Provolone Panini Sandwiches</a
+        >
+        <a href="/recipes/soup.html">Fresh Tomato Soup</a>
+      </div>
+    </main>
   </body>
 </html>
