--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -3,35 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="recipes-styles.css">
     <title>Fresh Tomato Soup</title>
   </head>
   <body>
-    <h1>Fresh Tomato Soup</h1>
-    <img src="/images/tomato-soup.webp" alt="Tomato Soup" />
-    <h3>Description</h3>
-    <p>
-      This tomato soup recipe is simple, quick, and perfect to make when
-      tomatoes are ripe in gardens and farmers' markets for a delicious
-      summertime treat. Delicious with garlic bread or a grilled cheese
-      sandwich.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>Tomatoes</li>
-      <li>Chicken broth</li>
-      <li>Garlic</li>
-      <li>Onion</li>
-      <li>Butter</li>
-      <li>Flour</li>
-      <li>Sugar</li>
-      <li>Salt</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>Boil the tomatoes, onion, garlic, and broth.</li>
-      <li>Run the mixture through a food mill into a large bowl.</li>
-      <li>Make a roux.</li>
-      <li>Add the tomato mixture and season.</li>
-    </ol>
+    <h1 class="title">Fresh Tomato Soup</h1>
+    <img
+      width="400x"
+      class="image" 
+      src="/images/tomato-soup.webp" 
+      alt="Tomato Soup" />
+    <main class="container">
+      <h3>Description</h3>
+      <p>
+        This tomato soup recipe is simple, quick, and perfect to make when
+        tomatoes are ripe in gardens and farmers' markets for a delicious
+        summertime treat. Delicious with garlic bread or a grilled cheese
+        sandwich.
+      </p>
+      <h3>Ingredients</h3>
+      <ul class="list">
+        <li>Tomatoes</li>
+        <li>Chicken broth</li>
+        <li>Garlic</li>
+        <li>Onion</li>
+        <li>Butter</li>
+        <li>Flour</li>
+        <li>Sugar</li>
+        <li>Salt</li>
+      </ul>
+      <h3>Steps</h3>
+      <ol class="list">
+        <li>Boil the tomatoes, onion, garlic, and broth.</li>
+        <li>Run the mixture through a food mill into a large bowl.</li>
+        <li>Make a roux.</li>
+        <li>Add the tomato mixture and season.</li>
+      </ol>
+    </main>
   </body>
 </html>
